Fixed horizontal scroll

--- a/pulsefit-appointment-dashboard/src/index.scss
+++ b/pulsefit-appointment-dashboard/src/index.scss
@@ -18,3 +18,9 @@ body {
     font-size: $font-size-subheading;
   }
 }
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
